lab4/src/css/App.css
#appContainer{
    background-image: url('../img/prism.png');
    border-radius: 10px;
    min-height: 500px;
}

.center{
    margin: auto;
    margin-top: 10%;
    width: 50%;
    /*border: 3px solid green;*/
    padding: 10px;
}

.link{
    text-decoration: none;
    color: white;
}

#backButton{
    position: absolute;
    top: 20px;
    right: 50px;
}


#menu{
    /* background-color: aqua; */
    width: 300px;
    height: 200px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 110px;
    text-align: center;
}

#searchContainer{
    /* background-color: rgb(0, 255, 149); */
    float: left;
    margin-right: 180px;
    margin-top: 190px;
    margin-left: 50px;
}

#addContainer{
    /* background-color: aqua;  */
    width: 300px;
    height: 200px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 150px;
    text-align: center;
}

#studentsContainer{
    /* background-color: aqua; */
    margin-top: 50px;
    float: left;
}


#searchGroupsContainer{
    /* background-color: rgb(0, 255, 149); */
    float: left;
    margin-right: 180px;
    margin-top: 190px;
    margin-left: 50px;
}

#groupsContainer{
    /* background-color: aqua; */
    margin-top: 50px;
    float: left;
}

